# framepro-app

./: .gitignore  PUBLISH.md  app.html  index.html  landing.temp.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
demo/: index.html
download/: index.html
framepro_v8/: README.md  collab-server.js
framepro_v8/src/pages/: WebsiteBuilder.tsx
framepro_v8/src/pages/builder/: framepro-sdk.ts  store.ts  types.ts
public/: _redirects
src/: App.tsx  LandingPage.tsx  desktop-app.ts  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AutoUpdater.tsx  UpdateButton.tsx
src/modules/webBuilder/: adapters.ts  api.ts  defaults.ts  seed.ts  slug.ts  storage.ts  types.ts  v0Generator.ts
src/modules/webBuilder/components/: WebsiteRenderer.tsx
src/modules/webBuilder/hooks/: useHistory.ts
src/pages/: Home.tsx  WebsiteBuilder.tsx
src/pages/builder/: framepro-sdk.tsx  store.ts  types.ts
src/pages/builder/components/: ABTestManager.tsx  AIContentGenerator.tsx  AnalyticsDashboard.tsx  CMSPanel.tsx  Canvas.tsx  CollabPresence.tsx  CustomDomain.tsx  EmailBuilderPanel.tsx  InlineEditor.tsx  IntegrationsHub.tsx  Marketplace.tsx  MobilePanel.tsx  PageBar.tsx  SidebarLeft.tsx  SidebarRight.tsx  ThemePicker.tsx
src/pages/builder/framepro/: ab-testing.ts  collaboration.ts  demo.ts  email-builder.ts  export.ts  integrations.ts  mobile-app.ts  preview.ts  push-notifications.ts  stripe.ts  templates.ts  themes.ts
src/services/: updateService.ts
src/utils/: runtime.ts
worker-updater/: index.js  wrangler.toml
(+45 files in other folders)
